# pyzim

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  tox.ini
examples/: README.md  info.py  iter.py  read.py  search.py  web.py  write.py
pyzim/: __init__.py  archive.py  bindable.py  blob.py  cache.py  cluster.py  compression.py  compressionstrategy.py  constants.py  counter.py  entry.py  exceptions.py  header.py  ioutil.py  item.py  mimetypelist.py  modifiable.py  operationbuffer.py  pointerlist.py  policy.py  processor.py  search.py  spaceallocator.py
pyzim/util/: __init__.py  iter.py  translator.py
tests/: __init__.py  base.py  pull_zts.sh  test_archive.py  test_bindable.py  test_blob.py  test_cache.py  test_cluster.py  test_compression.py  test_compressionstrategy.py  test_counter.py  test_entry.py  test_header.py  test_ioutil.py  test_item.py  test_mimetypelist.py  test_modifiable.py  test_pointerlist.py  test_processor.py  test_search.py  test_spaceallocator.py
tests/util/: __init__.py  test_ioutil.py  test_iter.py  test_translator.py
