# pyproject.toml for pyzim


# build system configuration
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# project metadata
[project]
name = "python-zim"
version = "0.1.0"
description = "Library for working with ZIM files"
authors = [
  { name = "IMayBeABitShy", email = "imaybeabitshy@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: File Formats",
]
requires-python = ">=3.7"
dependencies = [
]

# optional dependencies
[project.optional-dependencies]
testing = [
    "tox",
]
compression = [
    "pyzstd",
]
all = [
    "tox",
    "pyzstd",
]

# wheel generation
[tool.hatch.build.targets.wheel]
packages = ["pyzim"]

# project urls
[project.urls]
"Homepage" = "https://github.com/imaybeabitshy/pyzim"
"Bug Tracker" = "https://github.com/imaybeabitshy/pyzim/issues"
